# AI-ML

./: .gitignore  README.md
ai-engineering-projects/: README.md  (+1 more)
ai-engineering-projects/01_llm_api_chat/: .env.example  README.md  pyproject.toml
ai-engineering-projects/01_llm_api_chat/tests/: test_openai_chat.py
financial-operations-ai/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
financial-operations-ai/app/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
financial-operations-ai/app/services/: __init__.py  anomaly.py  assistant.py  categorization.py  ingestion.py  pipeline.py  reconciliation.py
financial-operations-ai/app/static/: index.html
financial-operations-ai/docs/: architecture.md
financial-operations-ai/reports/: evaluation.json  evaluation.md
financial-operations-ai/scripts/: evaluate.py  generate_demo_data.py  load_demo.py
financial-operations-ai/tests/: conftest.py  test_analysis.py  test_api.py  test_assistant.py  test_ingestion.py
wave-operator-lab/: MODEL_CARD.md  README.md  dashboard.py  evaluate.py  pyproject.toml  requirements.txt  run_pipeline.py  train.py
wave-operator-lab/artifacts/: cnn_best.pt  cnn_training_history.csv  fno_best.pt  fno_training_history.csv  training_manifest.json
wave-operator-lab/configs/: default.json
wave-operator-lab/reports/: benchmark.md  evaluation_samples.csv  evaluation_summary.json
wave-operator-lab/tests/: test_data.py  test_model.py  test_physics.py
wave-operator-lab/wave_operator/: __init__.py  config.py  data.py  evaluation.py  losses.py  model.py  physics.py  training.py  visualization.py
(+74 files in other folders)
