[project]
name = "financial-operations-ai"
version = "0.1.0"
description = "Financial reconciliation, anomaly detection and evidence grounded investigation"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "python-multipart>=0.0.18",
  "httpx>=0.28",
  "numpy>=2.0",
  "scikit-learn>=1.5",
]

[project.optional-dependencies]
test = ["pytest>=8.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
