[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-api-chat"
version = "0.1.0"
description = "A small Python CLI chat app using a hosted LLM API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.68.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
llm-chat = "llm_chat.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

